--- a/content/blog/2022-06-05-pmux.md
+++ b/content/blog/2022-06-05-pmux.md
@@ -1,5 +1,5 @@
 ---
-title: A Tmux based workflow for Software Projects 
+title: Scripting Tmux
 author: Marius Kimmina
 date: 2022-06-03 14:10:00 +0800
 tags: [Linux, tmux, scripting]
