--- a/content/blog/2022-06-05-pmux.md
+++ b/content/blog/2022-06-05-pmux.md
@@ -3,7 +3,7 @@ title: Scripting Tmux
 author: Marius Kimmina
 date: 2022-06-03 14:10:00 +0800
 tags: [Linux, tmux, scripting]
-published: true
+published: false
 ---
 
 TLDR: You can find the script that I use [here][script]  
